# charDeveloping

./: CMakeLists.txt  README.md  cdef.h  cfile.h  charDeveloping.cbp  charDeveloping.depend  charDeveloping.layout  char_library.rb  chardevelopingc.h  cmaths.h  cobjs.h  comands.h  cstdio.h  ctipes.h  cvector.h  funciones.c  game.c  main.c  main.cpp  objects.h  resource.h  resource.rc  sportsings_test.c  stringgame.rb  test.js  test_codes.c
.github/ISSUE_TEMPLATE/: bug_report.md  documentacion.md  enhancement.md  help wanted.md  issue--documentacion.md  user interface.md
.github/workflows/: Build_debug_test1.yml  CharDeveloping_build.yml  Checks.yml  Test_create_build.yml  build test code.yml  build test library.yml  build_test_library.yml  c-cpp.yml  cmake-p.yml  cmake.yml  codeQl.yml  codeql.yml  install_docker.yml  main_code.yml  notificacion.yml  test pwd.yml  test_Sportsings.yml
chardev/: chardef.h  chardev.h
chardev/testings_chardev/: main_test.c
chardev/testings_chardev/showCpngFile/: showWifiLogo.c  wifi_logo.cpng
